# Vision

./: .env.active-model  .env.example  .gitattributes  .gitignore  DEPLOYMENT_OFFLINE_GUIDE.md  DEPLOYMENT_SMOKE_TEST.md  FINAL_EVALUATION_CHECKLIST.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  setup_gpu_node.sh  test_e2e.py
.env.profiles/: config-a.env  config-b.env
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: chat.py  documents.py  router.py  search.py
backend/app/core/: database.py
backend/app/schemas/: document.py
backend/app/services/: embedding_service.py  graph_store.py  minio_service.py  rag_pipeline.py  reranker_service.py  vector_store.py
backend/app/tasks/: celery_app.py  ingest.py
backend/app/utils/: chunking.py
docs/: api-reference.md  architecture.md  deployment.md
monitoring/prometheus/: prometheus.yml
nginx/: nginx.conf
nginx/conf.d/: default.conf
scripts/: download-models.sh  download_only.py  download_support_models.py  export_offline_images.ps1  export_offline_images_linux.sh  final_offline_script.py  init-db.sql  init-neo4j.cypher  load_offline_images.sh  monitor_download.ps1  prepare_offline_models.py  run_safe_pipeline.ps1  switch-model.sh  validate-deployment.sh
services/docling/: Dockerfile  app.py  requirements.txt
services/embedding/: Dockerfile  app.py  requirements.txt
services/ocr/: Dockerfile  app.py  requirements.txt
services/reranker/: Dockerfile  app.py  requirements.txt
(+2 files in other folders)
