[tool.poetry]
name = "vision-backend"
version = "0.1.0"
description = "FastAPI backend for Vision Multi-Modal RAG System"
authors = ["Sreeharini"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
